# claude-memex

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.docs/: REPO-PLAN.md  gist-concept-piece.md  gist-hook-catalog.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: memex-ingestor.md  memex-linter.md  memex-planner.md
commands/: memex-autopilot-install.md  memex-autopilot-pause.md  memex-autopilot-resume.md  memex-autopilot-status.md  memex-autopilot-tick.md  memex-autopilot-uninstall.md  memex-docsite.md  memex-graph.md  memex-ingest.md  memex-init-profile.md  memex-init.md  memex-lint.md  memex-log.md  memex-migrate-from-operations.md  memex-open-q.md  memex-owner-action.md  memex-promote.md  memex-query.md  memex-resume.md
docs/: README.md  autopilot.md  concepts.md  cookbook.md  docker.md  docsite.md  hook-catalog.md  profile-authoring.md
docs/autopilot/: state-store-schema.md  worker-contract.md
examples/custom-profile-demo/: WALKTHROUGH.md
examples/engineering-ops-demo/: README.md
examples/research-project-demo/: README.md
examples/research-wiki-demo/: README.md  WALKTHROUGH.md  memex.config.json
examples/research-wiki-demo/.memex/: AGENTS.md  README.md  index.md  log.md
hooks/: hooks.json
hooks/scripts/: autopilot-budget-reset.py  autopilot-notify.py  autopilot-subagent-stop.py  autopilot-write-guard.py  doc-required.py  frontmatter-check.py  frontmatter-precheck.py  index-update.py  ingest-doc-link.py  path-guard.py  precompact-snapshot.py  readme-required.py  session-end-log.py  session-start-context.py  stop-log-append.py  stop-open-questions-check.py  stop-orchestrator.py  stop-project-owner-actions-check.py  stop-stale-check.py  update-check.py  user-prompt-context.py
hooks/scripts/_lib/: __init__.py  autopilot_state.py  autopilot_worker.py  config.py  frontmatter.py  index_parse.py  paths.py  patterns.py  state.py  transcript.py  version.py
memex_docsite/: __init__.py  annotations.py  auth.py  cli.py  comments.py  config.py  config_defaults.py  exporter.py  frontmatter.py  graph.py  paths.py  renderer.py  resolver.py  search.py  sections.py  server.py  sitetree.py  submissions.py  wiki_log.py
memex_docsite/static/: annotations.js  app.js  base.css  comments.js  graph.css  graph.js
memex_docsite/templates/: 404.html  base.html  folder.html  graph.html  page.html  search-results.html
memex_docsite/templates/comments/: list.html
memex_docsite/templates/open-questions/: form.html  list.html
memex_docsite/templates/partials/: backlinks.html  breadcrumbs.html  sections.html  toc.html  tree.html
schemas/: memex.config.schema.json
scripts/: check-versions.mjs  memex-toggle.sh  migrate_from_operations.py  usage-ab-test.md
scripts/autopilot/: coordinator_synth_report.py  installer.py  lifecycle.py  tick_integrate.py  tick_learn.py  tick_perceive.py  tick_plan.py  tick_preflight.py
skills/doc-query/: SKILL.md
skills/doc-refactor/: SKILL.md
skills/ingest-source/: SKILL.md
skills/open-questions-triage/: SKILL.md
skills/profile-builder/: SKILL.md
skills/wiki-lint/: SKILL.md
templates/shared/: agents.md.tmpl  claude.md.tmpl  frontmatter.md.tmpl
tests/: README.md  conftest.py  test_attribution.py  test_demo_ingest.py  test_docsite_annotations.py  test_docsite_auth.py  test_docsite_comments.py  test_docsite_config.py  test_docsite_config_defaults_parity.py  test_docsite_exporter.py  test_docsite_frontmatter_parity.py  test_docsite_graph.py  test_docsite_ignore.py  test_docsite_packaging.py  test_docsite_phase7.py  test_docsite_renderer.py  test_docsite_routes_phase2.py  test_docsite_routes_phase3.py  test_docsite_routes_phase4.py  test_docsite_routes_phase5.py  test_docsite_search.py  test_docsite_sections.py  test_docsite_sections_parity.py  test_docsite_server.py  test_docsite_submissions.py  test_hooks_posttooluse.py  test_hooks_pretooluse.py  test_hooks_session.py  test_lib.py  test_migration.py  test_profiles.py  test_unicode_paths.py  test_update_check.py
tests/autopilot/: test_autopilot_worker.py  test_installer.py  test_lifecycle.py  test_tick_phases.py  test_write_guard.py
(+65 files in other folders)
