[project]
name = "claude-memex"
version = "0.1.0a1"
description = "Claude Code plugin for LLM-maintained, hook-enforced project wikis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
  "types-PyYAML>=6",
]
docsite = [
  "starlette>=0.36",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "mistune>=3.0",
  "pyyaml>=6.0",
]

[project.scripts]
memex-docsite = "memex_docsite.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Hooks, agents, skills, commands, templates, and schemas remain plugin
# assets — not Python modules. The optional `memex_docsite` package is
# the one importable Python distribution this repo ships, gated behind
# the `docsite` extras so contributors who only touch hooks aren't forced
# to install Starlette/Uvicorn/Mistune.
packages = ["memex_docsite"]
include-package-data = true

[tool.setuptools.package-data]
memex_docsite = [
  "templates/*.html",
  "templates/**/*.html",
  "static/*",
  "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "examples/",
  "templates/",
  ".docs/",
  "llm-wiki.md",
]

[tool.ruff.lint]
# E/W: pycodestyle; F: pyflakes; I: isort; UP: pyupgrade; B: bugbear; SIM: simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
# E501 handled by formatter; E402 impossible to avoid with sys.path.insert before imports
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# Hook scripts legitimately bootstrap sys.path before local imports:
"hooks/scripts/*.py" = ["E402"]
# Tests may use wildcard imports / fixture-heavy patterns:
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
# Keep strictness moderate — hook scripts are small stdlib wrappers and
# imposing --strict would add noise without catching real bugs at this size.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
exclude = [
  '^examples/',
  '^templates/',
  '^\.docs/',
  '^tests/fixtures/',
]

[[tool.mypy.overrides]]
module = "tests.*"
# Test files use pytest fixture injection that's hard to type without plugins
ignore_errors = true

# `memex_docsite.*` was previously listed here with `warn_unused_ignores = false`
# and several disabled error codes. The form-data UploadFile/str narrowing was
# fixed in `_read_string_form` so we no longer need the override.
